Initial commit
Project scaffolding and initial file setup.