@@ -3,7 +3,7 @@ package net.runelite.client.plugins.microbot.runecrafting.gotr.data;
 
 import com.google.common.collect.ImmutableList;
 import net.runelite.api.gameval.ItemID;
-import net.runelite.api.ObjectID;
+import net.runelite.api.gameval.ObjectID;
 
 import java.util.List;
 
@@ -31,15 +31,15 @@ public enum CellType {
 
     public static int GetShieldTier(int shieldID) {
         switch (shieldID) {
-            case ObjectID.INACTIVE_CELL_TILE:
+            case ObjectID.GOTR_CELL_TILE_INACTIVE_NOOP:
                 return 0;
-            case ObjectID.WEAK_CELL_TILE:
+            case ObjectID.GOTR_CELL_TILE_TIER1:
                 return 1;
-            case ObjectID.MEDIUM_CELL_TILE:
+            case ObjectID.GOTR_CELL_TILE_TIER2:
                 return 2;
-            case ObjectID.STRONG_CELL_TILE:
+            case ObjectID.GOTR_CELL_TILE_TIER3:
                 return 3;
-            case ObjectID.OVERPOWERED_CELL_TILE:
+            case ObjectID.GOTR_CELL_TILE_TIER4:
                 return 4;
             default:
                 return -1;
@@ -47,6 +47,6 @@ public enum CellType {
     }
 
     public static List<Integer> PoweredCellList() {
-        return ImmutableList.of(ItemID.GOTR_CELL_TIER1, ItemID.GOTR_CELL_TIER4, ItemID.GOTR_CELL_TIER3, ItemID.GOTR_CELL_TIER2);
+        return List.of(ItemID.GOTR_CELL_TIER1, ItemID.GOTR_CELL_TIER4, ItemID.GOTR_CELL_TIER3, ItemID.GOTR_CELL_TIER2);
     }
 }
